<resources>
    <string name="app_name">MPEIguide</string>
    <string name="start_title">Добро пожаловать в \nприложение MPEIguide. \nПожалуйста, введите \nвашу группу:</string>
    <string name="start_hint">Например: А–07–20</string>
    <string name="timetable">Расписание</string>
    <string name="BARS">Барс</string>
    <string name="map">Карта</string>
    <string name="info">Информация</string>
    <string name="settings">Настройки</string>

    <string name="teacher_name">Имя преподавателя</string>
    <string name="description">Описание</string>
    <string name="classroom">Номер аудитории</string>
    <string name="name_of_event">Название события</string>
    <string name="time_of_event">Время</string>
    <string name="event_start_time">Время начала</string>
    <string name="event_end_time">Время окончания</string>
    <string name="event_type">Тип события</string>
    <string name="event_place">Место</string>

    <string name="create_event">Создание события</string>

    <string name="ok">Ок</string>

    <string name="pn">ПН</string>
    <string name="vt">ВТ</string>
    <string name="sr">СР</string>
    <string name="cht">ЧТ</string>
    <string name="pt">ПТ</string>
    <string name="sb">СБ</string>
    <string name="vs">ВС</string>
    <string name="week">неделя</string>

    <string name="another_info">Прочая информация</string>
    <string name="contacts">Контакты</string>
    <string name="organizations">Студ. организации</string>
    <string name="sites">Сайты</string>
    <string name="FAQ">Частые вопросы</string>
    <string name="kukuha_edet_pamagiti">Звонок психологу</string>

    <string name="position">Должность:</string>
    <string name="phone">Телефон:</string>
    <string name="osep_mail">Почта ОСЭП:</string>
    <string name="contact_classroom">Аудитория:</string>

    <string name="common_settings">Общие настройки</string>
    <string name="timetable_settings">Настройки расписания</string>
    <string name="bars_settings">Настройки БАРС</string>

    <string name="change_group">Изменить группу</string>
    <string name="alarm_button">Тревожная кнопка</string>
    <string name="show_teacher_name">Отображение преподавателя</string>
    <string name="show_pair_type">Отображение типа пары</string>
    <string name="show_description">Отображение заметок</string>
    <string name="note">Заметка</string>
    <string name="change_user">Изменить пользователя</string>
    <string name="notification_about_rating">Уведомления о новых оценках</string>

    <string name="search">Поиск</string>
    <string name="quest_answer">Вопрос-Ответ</string>

    <string name="vk_group">Группа ВК: </string>
    <string name="president">Председатель: </string>
    <string name="place">Аудитория: </string>

    <string name="delete_event">Удалить событие</string>

    <string name="enter_request">Введите запрос…</string>
</resources>