<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--TODO: Изменить иконки на соответствующие пунктам меню -->
    <item
        android:id="@+id/timetable"
        android:icon="@drawable/ic_timetable"
        android:title="@string/timetable" />
    <item
        android:id="@+id/bars"
        android:icon="@drawable/ic_bars"
        android:title="@string/BARS" />
    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_information"
        android:title="@string/info" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>