<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/info_fragment_container"
    tools:context=".info.InfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/info_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            style="@style/FatText"
            android:text="@string/another_info" />

        <Button
            android:id="@+id/contacts_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/RoundedCornerButton"
            android:text="@string/contacts" />

        <Button
            android:id="@+id/organization_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/RoundedCornerButton"
            android:text="@string/organizations" />

        <Button
            android:id="@+id/sites_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/RoundedCornerButton"
            android:text="@string/sites" />

        <Button
            android:id="@+id/FAQ_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/RoundedCornerButton"
            android:text="@string/FAQ" />

        <Button
            android:id="@+id/da_ya_psih_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            style="@style/RoundedCornerButton"
            android:text="@string/kukuha_edet_pamagiti" />

    </LinearLayout>
</FrameLayout>