<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="7sp"
    android:layout_marginEnd="7sp"
    android:background="@color/main_background_color"
    tools:context=".settings.SettingsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FatText"
        android:text="@string/settings" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        style="@style/SettingTextStyle"
        android:textStyle="bold"
        android:text="@string/common_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_background_shape"
        android:elevation="4sp"
        android:translationZ="1sp"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/change_group_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            style="@style/SettingStyle"
            android:layout_marginEnd="3sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/SettingTextStyle"
                android:text="@string/change_group" />

            <TextView
                android:id="@+id/current_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SettingTextStyle"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3sp"
            style="@style/SettingStyle"
            android:layout_marginEnd="3sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/SettingTextStyle"
                android:text="@string/alarm_button" />

            <Switch
                android:id="@+id/alarm_button_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        style="@style/SettingTextStyle"
        android:textStyle="bold"
        android:text="@string/timetable_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_background_shape"
        android:elevation="4sp"
        android:translationZ="1sp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            style="@style/SettingStyle"
            android:layout_marginEnd="3sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/SettingTextStyle"
                android:text="@string/show_teacher_name" />

            <Switch
                android:id="@+id/teacher_name_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingStyle"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="3sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/SettingTextStyle"
                android:text="@string/show_pair_type" />

            <Switch
                android:id="@+id/pair_type_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        style="@style/SettingTextStyle"
        android:textStyle="bold"
        android:text="@string/bars_settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_background_shape"
        android:elevation="4sp"
        android:translationZ="1sp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SettingStyle"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="3sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SettingTextStyle"
                android:text="@string/change_user" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/SettingStyle"
            android:layout_marginStart="3sp"
            android:layout_marginEnd="3sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/SettingTextStyle"
                android:text="@string/notification_about_rating" />

            <Switch
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

    </LinearLayout>

</LinearLayout>