<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_event_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".timetable.CreateEventActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">

        <ImageButton
            android:id="@+id/create_event_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BackButton"
            android:src="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/create_event_title"
            style="@style/FatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_event" />
    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:layout_marginEnd="7sp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CreateActivityTextStyle"
                android:text="@string/event_start_time" />

            <EditText
                android:id="@+id/event_start_time_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                style="@style/EventEditTextStyle"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CreateActivityTextStyle"
                android:text="@string/event_end_time" />

            <EditText
                android:id="@+id/event_end_time_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                style="@style/EventEditTextStyle"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CreateActivityTextStyle"
                android:text="@string/name_of_event" />

            <EditText
                android:id="@+id/event_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EventEditTextStyle"
                 />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CreateActivityTextStyle"
                android:text="@string/event_type" />

            <EditText
                android:id="@+id/event_type_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EventEditTextStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CreateActivityTextStyle"
                android:text="@string/event_place" />

            <EditText
                android:id="@+id/event_place_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EventEditTextStyle"
                 />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CreateActivityTextStyle"
                android:text="@string/teacher_name" />

            <EditText
                android:id="@+id/teacher_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EventEditTextStyle"
                 />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CreateActivityTextStyle"
                android:text="@string/note" />

            <EditText
                android:id="@+id/event_description_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                style="@style/EventEditTextStyle"
                 />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="35sp"
        android:layout_marginBottom="15sp"
        style="@style/RoundedCornerButton"/>

    <Button
        android:id="@+id/create_event_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RoundedCornerButton"
        android:text="@string/delete_event" />

</LinearLayout>