<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background_color"
    tools:context=".info.organizations.OrganizationDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/org_details_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BackButton"
            android:src="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/org_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_gravity="center_horizontal"
            style="@style/FatText"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/org_details_avatar"
            android:layout_width="180sp"
            android:layout_height="200sp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/org_details_vk_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vk_group" />

            <TextView
                android:id="@+id/org_details_president"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/president" />

            <TextView
                android:id="@+id/org_details_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/org_details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
</LinearLayout>